--- a/eastes_android-developer/yunqudao/app/src/main/res/layout/customers/layout/fragment_customers_xiangqing_pipei.xml
+++ b/eastes_android-developer/yunqudao/app/src/main/res/layout/customers/layout/fragment_customers_xiangqing_pipei.xml
@@ -85,7 +85,7 @@
                     android:id="@+id/tv_num"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text=""
+                    android:text="0"
                     android:textColor="@color/qianlan"
                     android:textSize="15sp"
                     />
