--- a/eastes_android-developer/yunqudao/app/src/main/res/layout/work/layout/fragment_work.xml
+++ b/eastes_android-developer/yunqudao/app/src/main/res/layout/work/layout/fragment_work.xml
@@ -328,7 +328,7 @@
         android:background="@drawable/ic_line"
         />
             <LinearLayout
-                android:visibility="gone"
+                android:visibility="visible"
                 android:orientation="vertical"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
