--- a/eastes_android-developer/yunqudao/app/src/main/res/layout/customers/layout/activity_project_danyuan.xml
+++ b/eastes_android-developer/yunqudao/app/src/main/res/layout/customers/layout/activity_project_danyuan.xml
@@ -330,7 +330,26 @@
         </LinearLayout>
 
     </LinearLayout>
-
-
+    <LinearLayout
+        android:orientation="horizontal"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+        <TextView
+            android:id="@+id/tv_baobeiquxiao"
+            android:gravity="center"
+            android:padding="20dp"
+            android:layout_weight="1"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:text="考虑一下"/>
+        <TextView
+            android:id="@+id/tv_baobeoqueren"
+            android:gravity="center"
+            android:padding="20dp"
+            android:layout_weight="1"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:text="确定"/>
+    </LinearLayout>
 
 </LinearLayout>
