--- a/eastes_android-developer/yunqudao/app/src/main/res/layout/customers/layout/activity_work_second_baobei_valid_details.xml
+++ b/eastes_android-developer/yunqudao/app/src/main/res/layout/customers/layout/activity_work_second_baobei_valid_details.xml
@@ -191,6 +191,7 @@
         >
 
         <TextView
+            android:id="@+id/tv_xiaoqumingzi"
             android:layout_marginLeft="10dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
