--- a/eastes_android-developer/yunqudao/app/src/main/res/layout/customers/layout/item_activity_house_type2.xml
+++ b/eastes_android-developer/yunqudao/app/src/main/res/layout/customers/layout/item_activity_house_type2.xml
@@ -44,7 +44,7 @@
                         android:textColor="@color/chunhei"
                         android:textSize="15sp"
                         />
-                    <TextView
+                    <ImageView
                         android:id="@+id/content_tv1"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
