--- a/eastes_android-developer/yunqudao/app/src/main/res/layout/house/layout/fragment_house.xml
+++ b/eastes_android-developer/yunqudao/app/src/main/res/layout/house/layout/fragment_house.xml
@@ -5,6 +5,7 @@
     android:orientation="vertical"
     >
     <LinearLayout
+        android:visibility="gone"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
@@ -80,7 +81,7 @@
         </RelativeLayout>
 
         <LinearLayout
-            android:visibility="gone"
+            android:visibility="visible"
             android:gravity="center"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
