--- a/eastes_android-developer/yunqudao/app/src/main/res/layout/house/layout/fragment_house_xiangmuxiangqing_fenxi.xml
+++ b/eastes_android-developer/yunqudao/app/src/main/res/layout/house/layout/fragment_house_xiangmuxiangqing_fenxi.xml
@@ -2,6 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/bgcolcor"
     android:orientation="vertical"
     >
     <LinearLayout
@@ -38,6 +39,7 @@
         android:layout_height="wrap_content"
         >
         <LinearLayout
+            android:background="@color/chunbai"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
@@ -50,6 +52,7 @@
                 android:paddingRight="10dp"
                 >
                 <LinearLayout
+                    android:layout_marginTop="20dp"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content">
                     <ImageView
@@ -68,11 +71,12 @@
                     />
                 </LinearLayout>
                 <TextView
-                    android:layout_marginTop="10dp"
+
+                    android:layout_marginTop="20dp"
                     android:id="@+id/content_tv6"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginBottom="10dp"
+                    android:layout_marginBottom="20dp"
                     android:layout_marginLeft="20dp"
                     android:layout_marginRight="10dp"
                     android:ellipsize="end"
@@ -96,6 +100,7 @@
                 android:paddingRight="10dp"
                 >
                 <LinearLayout
+                    android:layout_marginTop="20dp"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content">
                     <ImageView
@@ -114,11 +119,11 @@
                     />
                     </LinearLayout>
                 <TextView
-                    android:layout_marginTop="10dp"
+                    android:layout_marginTop="20dp"
                     android:id="@+id/content_tv7"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginBottom="10dp"
+                    android:layout_marginBottom="20dp"
                     android:layout_marginLeft="20dp"
                     android:layout_marginRight="10dp"
                     android:ellipsize="end"
@@ -141,6 +146,7 @@
                 android:paddingRight="10dp"
                 >
                 <LinearLayout
+                    android:layout_marginTop="20dp"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content">
                     <ImageView
@@ -159,11 +165,11 @@
                     />
                 </LinearLayout>
                 <TextView
-                    android:layout_marginTop="10dp"
+                    android:layout_marginTop="20dp"
                     android:id="@+id/content_tv8"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginBottom="10dp"
+                    android:layout_marginBottom="20dp"
                     android:layout_marginLeft="20dp"
                     android:layout_marginRight="10dp"
                     android:ellipsize="end"
@@ -185,6 +191,7 @@
                 android:paddingRight="10dp"
                 >
                 <LinearLayout
+                    android:layout_marginTop="20dp"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content">
                     <ImageView
@@ -204,11 +211,11 @@
                     />
                 </LinearLayout>
                 <TextView
-                    android:layout_marginTop="10dp"
+                    android:layout_marginTop="20dp"
                     android:id="@+id/content_tv9"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginBottom="10dp"
+                    android:layout_marginBottom="20dp"
                     android:layout_marginLeft="20dp"
                     android:layout_marginRight="10dp"
                     android:ellipsize="end"
