--- a/eastes_android-developer/yunqudao/app/src/main/res/layout/house/layout/fragment_house_xiangmuxiangqing_xiangmu.xml
+++ b/eastes_android-developer/yunqudao/app/src/main/res/layout/house/layout/fragment_house_xiangmuxiangqing_xiangmu.xml
@@ -33,9 +33,11 @@
 
                 </android.support.v4.view.ViewPager>
                     <TextView
+                        android:gravity="center"
+                        android:background="@drawable/tuoyuan"
                         android:id="@+id/tv_shuzi"
                         android:layout_gravity="right"
-                        android:layout_marginTop="180dp"
+                        android:layout_marginTop="170dp"
                         android:text=""
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content" />
